# prompt-bonsai

./: .gitignore  .readthedocs.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
api/compressor/: index.html
api/config/: index.html
api/exceptions/: index.html
benchmarks/: index.html  run_benchmarks.py
benchmarks/datasets/: sample_prompts.json
changelog/: index.html
docs/: benchmarks.md  changelog.md  examples.md  index.md
docs/api/: compressor.md  config.md  exceptions.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: configuration.md  integrations.md  quality.md  strategies.md
examples/: basic_usage.py  batch_compression.py  index.html  langchain_integration.py
getting-started/installation/: index.html
getting-started/quick-start/: index.html
search/: search_index.json
src/prompt_bonsai/: __init__.py  compressor.py  config.py  exceptions.py
src/prompt_bonsai/compressors/: __init__.py  base.py  hybrid.py  semantic.py  structural.py
src/prompt_bonsai/strategies/: __init__.py  abstraction.py  pruning.py  summarization.py
src/prompt_bonsai/utils/: __init__.py  metrics.py  quality.py  tokenizer.py
tests/: conftest.py  test_compressor.py  test_integration.py  test_strategies.py
user-guide/configuration/: index.html
user-guide/integrations/: index.html
user-guide/quality/: index.html
user-guide/strategies/: index.html
